[gd_scene load_steps=6 format=3 uid="uid://dxpugrcp6yynq"]

[ext_resource type="Script" path="res://UI/HealthBar.gd" id="1_6dsgr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4dbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrovi"]
corner_radius_top_right = 1
corner_radius_bottom_right = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1n08"]
bg_color = Color(0.0588235, 0.176471, 0.164706, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snjar"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_size = 1
shadow_offset = Vector2(0, 1)

[node name="HealthBar" type="ProgressBar"]
self_modulate = Color(0.12549, 1, 0.54902, 1)
light_mask = 0
z_index = 1
offset_left = 32.0
offset_top = 48.0
offset_right = 425.0
offset_bottom = 88.0
theme_override_styles/background = SubResource("StyleBoxEmpty_v4dbt")
theme_override_styles/fill = SubResource("StyleBoxFlat_rrovi")
max_value = 500.0
step = 0.1
value = 500.0
show_percentage = false
script = ExtResource("1_6dsgr")
metadata/_edit_lock_ = true

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_n1n08")
theme_override_styles/fill = SubResource("StyleBoxFlat_snjar")
value = 90.0
show_percentage = false
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
